* `request` now uses `curlPerform` instead of `getURL` to gain finer control over API requests.
* `request` now attempts to `tryCatch` any errors on writing the MTurkR log file. (#9)
* `request` now returns an object of S3 class "MTurkResponse" and an associated print method has been added.

## BUG FIXES ##
* Fixed a bug in `GetBonuses` whereby the default `return.all=TRUE` argument overwrote manually specified `pagenumber` and `pagesize` arguments. When `GetBonuses` is called with a `hit.type`, `return.all` is used recursively, such that `return.all=FALSE` returns the requested page for each HIT of the requested HITType. (h/t Dane Wendell)
* Corrected the API operation name in `SendTestEventNotification`.
* Fixed a bug in `GetBonuses` using a HITTypeId that caused the function to fail catastrophically.

## DOCUMENTATION ##
* All functions now reflect the new `...` argument, the contents of which are passed to `request`.
* All references to the `browser` options are removed given removal of the feature from all functions.
* Documentation for `mturkhelp` and `APIReference` now reflect deprecated status.
* Documentation file for `authenticate` now reflect its deprecated status. `request` notes that it no longer accepts `signature` or `timestamp` arguments, which are now generated internally.
* Documentation files for `request` and `ParseErrorCodes` have been updated to reflect their now non-exported status.
* Work on the MTurkR wiki (https://github.com/leeper/MTurkR/wiki) has begun, with contributions from Kyle Hamilton.
* The `add.seconds` parameter was incorrectly called `add.time` in the `ExtendHIT` documentation.

# CHANGES TO MTurkR 0.4 #

## SIGNIFICANT USER-VISIBLE CHANGES ##
* Functions that accept a `hit.type` argument can now generally accept a vector of HITTypeIds rather than just a single character string. See documentation.
* `GetBonuses` now allows requests to be opened in the default browser, like most other API functions.