@@ -2,11 +2,15 @@ SearchHITs <-
 searchhits <-
 function (response.group = NULL, return.all = TRUE, pagenumber = "1", 
     pagesize = "10", sortproperty = "Enumeration", sortdirection = "Ascending", 
-    return.hit.dataframe = TRUE, return.qual.dataframe = TRUE
+    return.hit.dataframe = TRUE, return.qual.dataframe = TRUE,
     verbose = getOption('MTurkR.verbose'), ...) {
     # temporary check for `print` argument (remove after v1.0)
     if('print' %in% names(list(...)) && is.null(verbose))
         verbose <- list(...)$print
+    if('sandbox' %in% names(list(...)))
+        sandbox <- list(...)$sandbox
+    else
+        sandbox <- getOption('MTurkR.verbose')
     operation <- "SearchHITs"
     if(!sortproperty %in% c("Title", "Reward", "Expiration", 
         "CreationTime", "Enumeration")) 
