@@ -46,7 +46,7 @@ WorkerBlockToDataFrame(xml = NULL, xml.parsed = NULL)
   \item{hit.number}{An optional parameter included for advanced users, to return only one of the specified HITs.}
   \item{sandbox}{A logical indicating whether GetQualificationType, called internally, should query the sandbox for user-defined QualificationTypes.}
 }
-\details{Mostly internal functions to convert XML-formatted MTurk responses into more useful R dataframes. These are mostly internal to the extent that most users will never call them directly, but they may be useful if one needs to examine information stored in the MTurkR log file, or if \code{\link{genericmturkr}} is used.}
+\details{Mostly internal functions to convert XML-formatted MTurk responses into more useful R dataframes. These are mostly internal to the extent that most users will never call them directly, but they may be useful if one needs to examine information stored in the MTurkR log file, or if \code{\link{request}} is used directly.}
 \value{A dataframe (or list of dataframes, in some cases) containing the request data.}
 \references{
 \href{http://docs.amazonwebservices.com/AWSMechTurk/latest/AWSMturkAPI/ApiReference_DataStructuresArticle.html}{API Reference: Data Structures}
